--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <!-- Plugin CSS -->
 
-
+<script src="readmore/readmore.min.js"></script>
 </head>
 
 <body id="page-top">
@@ -131,36 +131,33 @@
           <h2 class="text-white display-5"  style="padding-top: 0px;">ABOUT ME</h2>
                     <p style="padding-bottom: 0px;"></p>
           <p class="text-white lead mb-6">Rehan Manickam is a second year undergraduate student at Berklee dual majoring in music production and engineering and music business/management. With a focus on fostering a sense of community among artists in the industry and revolutionizing aspects of the performing arts, his experiences, projects, and involvement within the community are at the core of his vision and mission here at Berklee. Rehan is involved with multiple organizations on and off campus. Namely, SOFAR Sounds, AES, TEDx, Boston Calling and many more. His commitment to his work, peers and community at Berklee is demonstrated through his endeavors with Student Government, the Ambassador program and other platforms within the college.</p>
-
-          <p class="text-white lead mb-6"></p>
-
-          <p class="text-white lead mb-7"> His work experience consists of digital marketing, artist management, festival planning, data analytics, business innovation,  audio engineering, mixing, live sound and much more. His collaborative work with multiple musicians and professionals in Toronto, Boston, Dubai and Valencia have resulted in a respected rapport being formed amongst his professional network. An analytical strategist, fast learner and perseverant mentor, Rehan brings a lot to a team of professionals whilst simultaneously growing and developing his core skills. A committed academic, Rehan has been a Dean’s List recipient since the inception of his college career at Berklee. With multiple recommendations throughout his academic course, Rehan has a well-established and respected rapport amongst staff, faculty, students and alumni. Currently pursuing a course at Harvard Law  he has ambitions of transforming the legal aspects of the industry in order to promote and innovative and enriching environment amongst creators within the performing arts. </p>
-
-          <p class="text-white lead mb-7">Rehan is committed to his vision with a driven passion from conception to completion, and considers it the foundation of his successes but also the motivation behind his failures.</p>
-          <p style="padding-bottom: 1px"></p>
+          <div class="more">
+          <p class="text-white lead mb-6">
+          His work experience consists of digital marketing, artist management, festival planning, data analytics, business innovation,  audio engineering, mixing, live sound and much more. His collaborative work with multiple musicians and professionals in Toronto, Boston, Dubai and Valencia have resulted in a respected rapport being formed amongst his professional network. An analytical strategist, fast learner and perseverant mentor, Rehan brings a lot to a team of professionals whilst simultaneously growing and developing his core skills. A committed academic, Rehan has been a Dean’s List recipient since the inception of his college career at Berklee. With multiple recommendations throughout his academic course, Rehan has a well-established and respected rapport amongst staff, faculty, students and alumni. Currently pursuing a course at Harvard Law  he has ambitions of transforming the legal aspects of the industry in order to promote and innovative and enriching environment amongst creators within the performing arts. <br> <br>Rehan is committed to his vision with a driven passion from conception to completion, and considers it the foundation of his successes but also the motivation behind his failures.</p>
          
-          
-      </div>
-      <div class="col-md-10 mx-auto">
         <h2 class="text-white mb-0">"STRIVE NOT TO BE A SUCCESS, BUT TO BE OF VALUE."</h2>
         <p class="text-white mb-0">Albert Einstein</p>
-        <p style="padding-bottom: 40px"></p>
+        <p></p>
       </div>
     </div>
   </div>
-  </section>
+</div>
+</section>
 
-<!-- Portfolio Section -->
+   <!-- Portfolio Section -->
   <section id="portfolio">
     <h2 class="text-white text-center display-5" style="padding-bottom: 30px;padding-top: 15px; position: relative;">MY PORTFOLIO</h2>
     <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
+        </div>
+        <div class="col-4">
           <a class="portfolio-box lead" href="img/portfolio/fullsize/MPTI2.jpg" title="MPTI Assisting Recording Engineer, Fall 2018 / Spring 2019, Berklee Valencia, Set-Up/Teardown, Session Set Up, Mixing / Recording Assist, Develop, enhance and hone in on production and recording skills, over 60+ hours logged, only undergraduate student at Berklee Valencia to have achieved this, Project.">
             <img class="img-fluid" src="img/portfolio/thumbnails/MPTI2.jpg" alt="">
             <div class="portfolio-box-caption lead">
               <div class="project-category text-white-50">
-              MPTI Assisting Recording Engineer
+               Click here to see more
+               <br> MPTI Assisting Recording Engineer
               </div>
               <div class="project-name ">
               Fall 2018 / Spring 2019
@@ -168,9 +165,10 @@
             </div>
           </a>
         </div>
+
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box lead" href="img/portfolio/fullsize/Ambass.jpeg" title="Exchange Ambassador Program, Fall 2018 / Spring 2019, Berklee Valencia, Program Lead, assist Student affairs with orientation for incoming students and students moving on to Boston: coordinate mentorship with academic ambassador program in Boston for First Year students, Project.">
-            <img class="img-fluid" src="img/portfolio/thumbnails/Ambass.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/thumbnails/Ambass.jpg"  style="display: none;" alt="">
             <div class="portfolio-box-caption lead">
               <div class="project-category text-white-50">
               Exchange Ambassador Program
@@ -182,8 +180,8 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box lead" href="img/portfolio/fullsize/Bridgingthegap.jpg" title="Bridging the Gap, Spring 2019, Berklee Valencia, Project Co-Lead, free and open platforms for students of various backgrounds to acquire studio skills, universal industry terminology and opportunities to network with the working professionals in the music industry, project.">
-            <img class="img-fluid" src="img/portfolio/thumbnails/Bridgingthegap.jpg" alt="">
+          <a class="portfolio-box lead" href="img/portfolio/fullsize/Bridgingthegap.jpg" title="Bridging the Gap, Spring 2019, Berklee Valencia, Project Co-Lead,   free and open platforms for students of various backgrounds to acquire studio skills, universal industry terminology and opportunities to network with the working professionals in the music industry, project.">
+            <img class="img-fluid" src="img/portfolio/thumbnails/Bridgingthegap.jpg" style="display: none;" alt="">
             <div class="portfolio-box-caption lead">
               <div class="project-category text-white-50">
               Bridging the Gap
@@ -196,7 +194,7 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box lead" href="img/portfolio/fullsize/gospelensemble.jpeg" title="Performances at Musaico Festival, Spring 2019, Ciudad de les arts y sciences, External, Keys for Contemporary Instrumental Gospel Ensemble, develop skills for live performances and showcase these skills in front of 5000 people at a Berklee’ hosted and run festival, gig.">
-            <img class="img-fluid" src="img/portfolio/thumbnails/gospelensemble.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/thumbnails/gospelensemble.jpg"  style="display: none;" alt="">
             <div class="portfolio-box-caption lead">
               <div class="project-category text-white-50">
                 Musaico Festival
@@ -209,7 +207,7 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box lead" href="img/portfolio/fullsize/madrid.jpg" title="Candidate at Intl. Industry Day Trip Valencia (Fall 2018) & Madrid (Spring 2019), External, Student candidate, interact with companies such as Live Nation, Universal Spain to understand how the industry works in Europe, project candidate. Selection based on academic merit with the International Career Centre. ">
-            <img class="img-fluid" src="img/portfolio/thumbnails/madrid.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/thumbnails/madrid.jpg"  style="display: none;" alt="">
             <div class="portfolio-box-caption lead">
               <div class="project-category text-white-50">
                 Industry Day Trip
@@ -222,7 +220,7 @@
         </div>
         <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box lead" href="img/portfolio/fullsize/BVCEL.jpg" title="BVCEL Certification, Fall 2018, Berklee Valencia, Law and Management Valencia Board President, Educate, encourage and inspire undergrads and masters students about the Music Business and Legal aspects - #WomenInLaw chapter to empower and advocate for women in the industry related to the music business, award.">
-              <img class="img-fluid" src="img/portfolio/thumbnails/BVCEL.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/thumbnails/BVCEL.jpg"  style="display: none;" alt="">
               <div class="portfolio-box-caption lead">
               <div class="project-category text-white-50">
                 BVCEL Certification
@@ -235,7 +233,7 @@
             </div>
           <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box lead" href="img/portfolio/fullsize/sofar.png" title="Volunteer at SofarSounds Valencia, Spring 2019, SOFAR Valencia Chapter, Planning and Production, organize an intimate concert at a local venue in Valencia promoting artists from the region, Berklee as well as the local community, project volunteer.">
-            <img class="img-fluid" src="img/portfolio/thumbnails/sofar.png" alt="">
+            <img class="img-fluid" src="img/portfolio/thumbnails/sofar.png"  style="display: none;" alt="">
             <div class="portfolio-box-caption lead">
               <div class="project-category text-white-50">
               SofarSounds
@@ -248,7 +246,7 @@
         </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box lead" href="img/portfolio/fullsize/BostonCalling.png" title="Volunteer at Boston Calling, Summer 2019, Boston Calling Festival, External, Assist Production Teams, learn the workings of a live music festival inside out from operations to ticketing to marketing to riders to production with Live Nation, festival volunteer. ">
-              <img class="img-fluid" src="img/portfolio/thumbnails/BostonCalling.png" alt="">
+              <img class="img-fluid" src="img/portfolio/thumbnails/BostonCalling.png"  style="display: none;" alt="">
               <div class="portfolio-box-caption lead">
               <div class="project-category text-white-50">
                 Volunteer at Boston Calling
@@ -261,7 +259,7 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box lead" href="img/portfolio/fullsize/DeansList.png" title="Deans List, Fall 2017 Spring 2018 Fall 2018, Berklee Boston & Berklee Valencia, Student, Maintain excellent academic standing with balanced co-curricular endeavors, award.">
-              <img class="img-fluid" src="img/portfolio/thumbnails/DeansList.png" alt="">
+              <img class="img-fluid" src="img/portfolio/thumbnails/DeansList.png"  style="display: none;" alt="">
               <div class="portfolio-box-caption lead">
               <div class="project-category text-white-50">
                 Deans List
@@ -274,7 +272,7 @@
           </div>
         <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box lead" href="img/portfolio/fullsize/gh.png" title="GHStrategic, Summer & Fall 2018, External, Intern for Marketing and Data Analysis, gain real world practical experience in the areas of marketing and data analysis with George Howard and Dan Servantes, internship.">
-              <img class="img-fluid" src="img/portfolio/thumbnails/gh.png" alt="">
+              <img class="img-fluid" src="img/portfolio/thumbnails/gh.png" style="display: none;" alt="">
               <div class="portfolio-box-caption lead">
               <div class="project-category text-white-50">
               GHStrategic
@@ -287,7 +285,7 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box lead" href="img/portfolio/fullsize/StudentAdvisoryBoard.png" title="Student Advisory Board, Fall 2018 / Spring 2019 Study Abroad Representative, Address on campus issues regarding academics, extracurriculars and issues of diversity, equity and inclusion, Student Board.">
-              <img class="img-fluid" src="img/portfolio/thumbnails/StudentAdvisoryBoard.png" alt="">
+              <img class="img-fluid" src="img/portfolio/thumbnails/StudentAdvisoryBoard.png"  style="display: none;" alt="">
               <div class="portfolio-box-caption lead">
               <div class="project-category text-white-50">
                 Student Advisory Board
@@ -300,7 +298,7 @@
         </div>
         <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box lead" href="img/portfolio/fullsize/BerkleeBlog.png" title="Blog for Berklee, Spring 2019, Berklee Valencia, Writer, share my experience as a student here in Valencia reflecting on resources, opportunities and co-curricular live, project. ">
-              <img class="img-fluid" src="img/portfolio/thumbnails/BerkleeBlog.png" alt="">
+              <img class="img-fluid" src="img/portfolio/thumbnails/BerkleeBlog.png"  style="display: none;"alt="">
               <div class="portfolio-box-caption lead">
               <div class="project-category text-white-50">
                 Berkelee Blog
@@ -428,6 +426,6 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/creative.min.js"></script>
-
+  <script src='readmore/readmore.min.js'></script>
 </body>
 </html>
