--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/MPTI2.jpg" alt="">
             <div class="portfolio-box-caption lead">
               <div class="project-category text-white-50">
-               Click here to see more
-               <br> MPTI Assisting Recording Engineer
+               
+               <br> MPTI Assisting Recording Engineer, Fall 2018 / Spring 2019
               </div>
               <div class="project-name ">
-              Fall 2018 / Spring 2019
+              Click to see more
               </div>
             </div>
           </a>
