--- a/index.html
+++ b/index.html
@@ -216,18 +216,18 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-6 form-group">
+                            <div class="col-sm-6 form-group">
                                 <label for="name"> Your Name:</label>
                                 <input type="text" class="form-control" id="name" name="name" required="">
                             </div>
-                            <div class="col-med-6 form-group">
+                            <div class="col-sm-6 form-group">
                                 <label for="name"> Your Number:</label>
                                 <input type="name" class="form-control" id="name" name="name" required="">
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-sm-6 form-group">
-                                <label for="email"> Email: <p><p></p></p></label>
+                                <label for="email"> Email: </label>
                                 <input type="email" class="form-control" id="email" name="email" required="">
                             </div>
                             <div class="col-sm-6 form-group">
@@ -265,7 +265,7 @@
   <!-- Footer -->
   <footer class="bg-light py-5">
     <div class="container">
-      <div class="small text-center text-muted">Copyright &copy; 2019 - Start Bootstrap</div>
+      <div class="small text-center text-muted">Copyright &copy; </div>
     </div>
   </footer>
 
