--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                         </div>
                         <div class="row">
                             <div class="col-sm-12 form-group">
-                                <button type="submit" class="btn btn-lg btn-default pull-right" style="color: white">Send →</button>
+                                <button type="submit" class="btn btn-lg btn-default pull-right" style="color: black">Send →</button>
                             </div>
                         </div>
                     </form>
