final web update

--- a/index.html
+++ b/index.html
@@ -133,11 +133,12 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2 class="text-white display-5"  style="padding-top: -10px;">Who We Are</h2>
-                    <p style="padding-bottom: 0px;"></p>
+                    <p style="padding-bottom: 10px;"></p>
           <p class="text-white lead mb-6">Excel Engineering is a small civil engineering firm that focuses on the development of modern and sustainable infrastructure. We a history of doing a good job whilst using the finest materials for a more than reasonable price. We are a growing business with the aim of ensuring our customers are as happy with the product as we are designing and executing it. (we can shrink it but you would probably want to fill it up so more content will be helpful but its your choice, we can always change the spacing)</p>
-          <div class="more"> 
+          <div class="more" style="padding-bottom: 20px"> 
           <p class="text-white lead mb-6">
           Find Out More (we can remove this if you want or like put it to some other page, whatever you want we can do anything)<!--<br> <br>Rehan is committed to his vision with a driven passion from conception to completion, and considers it the foundation of his successes but also the motivation behind his failures.--></p>
+          <p style="padding-bottom: 20px"></p>
          <!--
         <h2 class="text-white mb-0">""</h2>
         <p class="text-white mb-0">Albert Einstein</p>
