--- a/references.html
+++ b/references.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <div class="overlay"></div>
-  <title>Excel Engineering</title>
+  <title>Blurry Mane</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -55,7 +55,7 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <!-- For <a> tag below if you want this as a button class="navbar-brand js-scroll-trigger" href="#page-top"-->
-      <a class="navbar-brand" style="font-family: 'Montserrat'; font-weight: 200; font-size: 14px">Excel Engineering</a>
+      <a class="navbar-brand" style="font-family: 'Montserrat'; font-weight: 200; font-size: 14px">Blurry Mane</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -99,10 +99,6 @@
 
 <!-- Reference Section -->
 <header header class="masthead">
-  <div class="overlay"></div>
-  <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-    <source src="img/Turntable.mp4" type="video/mp4">
-  </video>
 </header>
 
 <!--<section id="signup" class="signup-section">
