--- a/references.html
+++ b/references.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <div class="overlay"></div>
-  <title>Rehan Manickam</title>
+  <title>Blurry Mane</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -55,43 +55,40 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <!-- For <a> tag below if you want this as a button class="navbar-brand js-scroll-trigger" href="#page-top"-->
-      <a class="navbar-brand" style="font-family: 'Montserrat'; font-weight: 200; font-size: 14px">REHAN JAY MANICKAM</a>
+      <a class="navbar-brand" style="font-family: 'Montserrat'; font-weight: 200; font-size: 14px">Blurry Mane</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive" style="font-family: 'Montserrat'; font-weight: 200; font-size: 14px"  >
-        <ul class="navbar-nav ml-auto">
+         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html">HOME</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#page-top">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#about">ABOUT</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#about">Who We Are</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#portfolio">PORTFOLIO</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#Services">Services We Offer</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#contact">CONTACT</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#portfolio">Our Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#signup">REFERENCES</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="img/pdf/RESUME.pdf" download target="_blank" style=" padding-right: 1.5rem">RESUME</a>
+            <a class="nav-link js-scroll-trigger" href="references.html">Contact Us</a>
           </li>
           <li>
-            <a href="https://www.instagram.com/rehanjaym/" class="mx-2" target="_blank">
+            <a href="" class="mx-2" target="_blank">
               <i class="nav-link js-scroll-trigger fab fa-instagram" style="padding-bottom: 0rem; padding-top: 0.7rem;"></i>
             </a>
           </li>
           <li>
-            <a href="https://www.facebook.com/rehanjaym" class="mx-2" target="_blank">
+            <a href="" class="mx-2" target="_blank">
               <i class="nav-link js-scroll-trigger fab fa-facebook-square" style="padding-bottom: 0rem; padding-top: 0.7rem;"></i>
             </a>
           </li>
           <li>  
-            <a href="http://linkedin.com/in/rehanjaym/" class="mx-2" target="_blank">
+            <a href="" class="mx-2" target="_blank">
               <i class="nav-link js-scroll-trigger fab fa-linkedin-in" style="padding-bottom: 0rem; padding-top: 0.7rem;"></i>
             </a>
           </li>
@@ -101,77 +98,82 @@
   </nav>
 
 <!-- Reference Section -->
-<header header class="masthead">
-  <div class="overlay"></div>
-  <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-    <source src="img/Turntable.mp4" type="video/mp4">
-  </video>
+<header header class="masthead">  
 </header>
 
-<section id="signup" class="signup-section">
-  <h2 class="text-white display-5 text-center display-5 col-xl text-center" style="padding-top: 100px; padding-bottom: 100px;">REFERENCES</h2>
-  <div class="col-lg-8 mx-auto">
-    <div class="row">
-        <div class="col-md-3 text-center">
-          <a href="img/pdf/1.jpeg" download class="text-white-50 mb-6" target="_blank">
-            <img src="img/thumb1.png"><br>GEMS Modern Academy
-          </a>
+<!--<section id="signup" class="signup-section">
+  <h2 class="text-white display-5 text-center display-5 col-xl text-center" style="padding-top: 100px; padding-bottom: 100px;">REFERENCES</h2>-->
+ <section id="contact" class="contact-section justify-content-center" >
+    
+              <div class="container-fluid p-0">
+                <div class="row justify-content-center no-gutters">
+                  <div class="col-4" style="color:white; padding-top: 100px;">
+                    <p>This form will be functional when it is online and hosted, it can also be wider or to the side, if you also want a map of your business location I can also put it side by side to this contact form</p>
+                    <h2 class="text-white text-center display-5" style="padding-bottom: 30px;padding-top: 15px; position: relative;">Contact Us</h2> 
+                    <p> Please send your message below.</p>
+                    <form role="form" method="post" id="reused_form">
+                        <div class="row">
+                            <div class="col-sm-12 form-group">
+                                <label for="message"> Message:</label>
+                                <textarea class="form-control" type="textarea" name="message" id="message" maxlength="6000" rows="7"></textarea>
+                            </div>
+                        </div>
+                        <div class="row" style="align-items: flex-end;">
+                            <div class="col-sm-6 form-group">
+                                <label for="name"> Full Name:</label>
+                                <input type="text" class="form-control" id="name" name="name" required>
+                            </div>
+                            <div class="col-sm-6 form-group">
+                                <label for="email"> Email:</label>
+                                <input type="email" class="form-control" id="email" name="email" required>
+                            </div></div>
+                        <div class="row" style="align-items: flex-end;">
+                            <div class="col-sm-6 form-group" style="display: inline-block;">
+                                <label for="tel" style="font-size: 100%"> Phone Number: </label>
+                                <input type="tel" class="form-control" id="tel" name="tel" required style="">
+                            </div>
+                            <div class="col-sm-6 form-group" style=";">
+                                <label for="name" style="font-size: 1vw;  "> Preferred communication method:</label>
+                                <input type="text" class="form-control" id="email" name="email" required>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12 form-group" style="padding-top: 10px;">
+                                <button type="submit" class="btn btn-lg btn-default pull-right" style="color: white">Send &rarr;</button>
+                            </div>
+                        </div>
+                    </form>
+                    <div id="success_message" style="width:100%; height:100%; display:none; "> <h3>Posted your message successfully!</h3> </div>
+                    <div id="error_message" style="width:100%; height:100%; display:none; "> <h3>Error</h3> Sorry there was an error sending your form. </div>
+                </div>
+            </div>
         </div>
-        <div class="col-md-3 text-center">
-          <a href="img/pdf/2.jpeg" download class="text-white-50 mb-6" target="_blank">
-            <img src="img/thumb1.png"><br>GEMS Modern Academy
-          </a>
-          </a>
-        </div>
-        <div class="col-md-3 text-center">
-          <a href="img/pdf/3.jpeg" download class="text-white-50 mb-6" target="_blank">
-            <img src="img/thumb1.png"><br>GEMS Modern Academy
-          </a>
-          </a>
-        </div>
-        <div class="col-md-3 text-center">
-          <a href="img/pdf/4.jpeg" download class="text-white-50 mb-6" target="_blank">
-            <img src="img/thumb1.png"><br>GEMS Modern Academy
-          </a>
-          </a>
-        </div>
-      </div>
-  <p style="padding-bottom: 30px"> </p>
-  <div class="row">
-        <div class="col-md-3 text-center ">
-          <a href="img/pdf/5.jpeg" download class="text-white-50 mb-6" target="_blank">
-            <img src="img/thumb1.png"><br>GEMS Modern Academy
-          </a>
-          </a>
-        </div>
-        <div class="col-md-3 text-center ">
-          <a href="img/pdf/tfssreference.pdf" download class="text-white-50 mb-6" target="_blank">
-            <img src="img/thumb2.png"><br>Turner Fenton Secondary School
-          </a>
-        </div>
-        <div class="col-md-3 text-center ">
-          <a href="img/pdf/BerkleeScholarships.pdf" download class="text-white-50 mb-6" target="_blank">
-            <img src="img/thumb3.png"><br>Berklee College of Music
-          </a>
-        </div>
-        <div class="col-md-3 text-center ">
-          <a href="img/pdf/BerkleeLetter.pdf" download class="text-white-50 mb-6" target="_blank">
-            <img src="img/thumb3.png"><br>Berklee College of Music
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
+        <div class="justify-content-center" style="position: relative;">
+                      <p style="">these are social links not yet connected! (they are centered)(whatever icons that will be needed will be put inside the circles) if you want it above we can put it there too </p>
+
+                    </div>
+                    <div class="social d-flex justify-content-center" style="position: relative; margin-top: 1rem;">
+        <a href="" class="mx-2" target="_blank">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="" class="mx-2" target="_blank">
+          <i class="fab fa-facebook-square"></i>
+        </a>
+        <a href="" class="mx-2" target="_blank">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+      </div>  
+  </section> 
   <p style="padding-bottom: 30px"> </p>
 </section> 
 
   <!-- Footer -->
-  <footer class="bg-black small text-center text-white-50">
+  <!-- Footer -->
+  <footer class="bg-black small text-center text-white-50" style="padding-top: 5px; padding-bottom: 5px; position: relative;">
     <div class="container">
-      Copyright &copy; Rehan Manickam 2019
+      Copyright location &copy; 
     </div>
   </footer>
-
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
