--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@ function myFunction() {
 <section id="masthead" class="about-section2" style="background-color: white; margin-left: auto; margin-right: auto; padding-top: 100px; max-height: 900px; height: auto;">
   <div class="container" style="; max-width: 1200px; position: relative;">
 
-    <!--<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="width: auto; height: auto; z-index: 2">
-          <h1 class="lead mb-0 text-uppercase text-center" style=" z-index: 100000; vertical-align: top; position: absolute; font-size: 100%; color: black; font-weight: 600; line-height: 1rem; letter-spacing: 0.4rem; padding-top:5px;">Blurry Barbershop</h1>-->
-          <!--<div class="justify-content-center" style="position: absolute; top: 52vw; left: 37vw; z-index:112341423;">
-     <button onclick="myFunction()" class="btn btn-default pull-right" style="color: black; background-color: white;">Book Appointment</button>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="width: auto; height: auto; z-index: 2">
+          <!--<h1 class="lead mb-0 text-uppercase text-center" style=" z-index: 100000; vertical-align: top; position: absolute; font-size: 100%; color: black; font-weight: 600; line-height: 1rem; letter-spacing: 0.4rem; padding-top:5px;">Blurry Barbershop</h1>-->
+          <div class="justify-content-center" style="position: absolute; top: 52vw; left: 37vw; z-index:112341423;">
+     <!--<button onclick="myFunction()" class="btn btn-default pull-right" style="color: black; background-color: white;">Book Appointment</button>
     <script>
 function myFunction() {
   if (confirm("                    BLURRY MANE BARBERSHOP COVID-19 NOTICE \n\nClients will NOT be serviced if they fail to comply with the Toronto Public Health Standards: \n    Being in close contact with someone who is sick or has been\n    confirmed with Covid-19 in the past 14 days. \n    Returned from travel outside Canada in the past 14 days. \n    Experiencing the following symptoms: Fever, Cough, Shortness \n    of breath, Headache, Sore Throat, Loss of Taste or Smell. \n \nAlso, Clients MUST wear a mask and hand sanitizer must be applied upon arrival. Arriving with additional guests will NOT be allowed (Friends, Partners, and Children). \n                    IMPORTANT NOTE! \n\nBeard services will not performed until further notice and appointment times are extended to ensure sanitation and prices will reflect. \n \n By pressing 'Ok' you are accepting all the rules set in place at this facility during this pandemic. \n \n \n LMK if this is good or if you want a custom button.")) {
@@ -122,8 +122,8 @@ function myFunction() {
     return;
   }
 }
-</script>
-                            </div>-->
+</script>-->
+                            </div>
           <!--<p style="font-size: 12px; padding-bottom: 50px; color: black;">sublime repair pls This also doesnt have to be here its just here for whatever way you want it to be set up</p>-->
           <!--<hr class="divider my-4">-->
 
@@ -201,7 +201,7 @@ function myFunction() {
   		
       <div class="justify-content-center" style="position: relative; margin-bottom: 5px; color: black;">
       	<h1 class="display-5"  style="padding-top: 10px; text-align: left; padding-bottom: 10px;">Our Projects</h1>
-      				<div class="container-fluid" style="max-width: fit-content;">
+      				<div class="container-fluid" style="max-width: fit-content; width: fit-content;">
   <div class="row" style="padding-bottom: 20px;">
         <div class="col-sm-3" style="max-width: 300px;" >
           
