--- a/index.html
+++ b/index.html
@@ -160,16 +160,19 @@ function myFunction() {
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto" style="margin-top: 10px">
-          <h2 class=" display-5"  style="padding-top: 10px; color: black;">Youtube video or something about who we are lmk</h2>
-                    <p style="padding-bottom: 10px; color: black;"></p>
-          <p class=" lead mb-6" style="color: black;"> we can have this as an about thing if you want (we can shrink it but you would probably want to fill it up so more content will be helpful but its your choice, we can always change the spacing)</p>
-          <div class="more" style="padding-bottom: 20px margin-bottom:10px;"> 
-          <p class="lead mb-6" style="color: black;">
-          Find Out More (we can remove this if you want or like put it to some other page, whatever you want we can do anything)<!--<br> <br>Rehan is committed to his vision with a driven passion from conception to completion, and considers it the foundation of his successes but also the motivation behind his failures.--></p>
-         <!--
-        <h2 class="text-white mb-0">""</h2>
-        <p class="text-white mb-0">Albert Einstein</p>
-        <p></p>-->
+<h1 class="col-xl no no-gutters"  style="padding-top: -10px;  padding-bottom: 10px; color: black;">Spice up your cut with Blurry Breeze!</h1>
+  <div class="container-fluid justify-content-center" style="">
+  <div class="row" style="padding-bottom: 50px; padding-top: 50px;" >
+        <div class="col-lg-4">
+          <!--1-->
+            <img class="img-fluid ml-auto hvr-grow-shadow"src="img/portfolio/fullsize/gel1.jpeg" alt="" style="display: block; max-height: 300px;">  
+      </div><div class="col-lg-4">
+          <!--1-->
+            <img class="img-fluid hvr-grow-shadow"src="img/portfolio/fullsize/gel2.jpeg" alt="" style="display: block; max-height: 300px;"> 
+      </div><div class="col-lg-4">
+          <!--1-->
+            <img class="img-fluid mr-auto hvr-grow-shadow"src="img/portfolio/fullsize/gel3.jpeg" alt="" style="display: block; max-height: 300px;"> 
+      </div>
       </div>
     </div>
   </div></div>
@@ -192,7 +195,23 @@ function myFunction() {
     </div>
   </div>
 </section>
--->
+--><section id="portfolio" class="contact-section justify-content-center" style="background-color: white; width: 80%; left: 50%" >
+
+        
+<!--
+          <div class="social d-flex justify-content-center" style="position: relative; margin-top: 1rem;  filter: invert(100%)">           
+        <a href="" class="mx-2" target="https://www.instagram.com/blurrymane/">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="" class="mx-2" target="_blank">
+          <i class="fab fa-map-signs"></i>
+        </a>
+        <a href="" class="mx-2" target="_blank">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+      </div>  -->
+</section>
+
 
 
 
