--- a/store.html
+++ b/store.html
@@ -190,19 +190,14 @@ function myFunction() {
       </div>  -->
 </section>
 
-  --><!-- Footer -->
-  <section><footer class="bg-black small text-center text-white-50" style="   position:absolute;
-   bottom:0;
-   width:100%;
-   padding: 0px;
-   padding-top: 10px;/* Height of the footer */
-   background:#6cf;">
+  <!-- Footer -->
+  <section><footer class=" small text-center text-white-50" style="padding-top: 5px; padding-bottom: 0px; position: relative; background-color: black;">
     <div class="text-center text-white-50" >
       <a href="https://www.google.com/maps/dir//10+Hurontario+St,+Inglewood,+ON+L7C+0S8/@43.7736498,-79.9140104,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x882b10596c2c26f9:0x6c28527d5df06550!2m2!1d-79.878991!2d43.7735932" style="line-height: 10px; padding-top: 10px;color: rgba(255,255,255, 0.5); text-decoration: none;">7900 Hurontario Street Unit #10, Brampton ON</a>
       <p style="line-height: 10px; margin-top:7.5px;">number or email for business inquiries</p>
       
 
-    <div class="container">
+    <div class="container" style="padding-top: 29px;">
 
     </div>
        2020 Blurry Mane Barbershop&copy;
