shadow grow update

--- a/store.html
+++ b/store.html
@@ -86,12 +86,12 @@ function myFunction() {
          </ul>
          <ul class="navbar-nav ml-auto" style="margin-right: 0px;">
           <li class="nav-item"  style="padding-left: 10px;">
-            <a href="" class="mx-2" target="https://www.instagram.com/blurrymane/">
+            <a class="mx-2" href="https://www.instagram.com/blurrymane/" target="https://www.instagram.com/blurrymane/">
               <i class="nav-link js-scroll-trigger fab fa-instagram" style="padding-bottom: 0rem; padding-top: 0rem;"></i>
             </a>
           </li>
           <li class="nav-item"  style="padding-left: 10px;">
-            <a href="" class="mx-2" target="https://www.google.com/maps/dir//10+Hurontario+St,+Inglewood,+ON+L7C+0S8/@43.7736498,-79.9140104,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x882b10596c2c26f9:0x6c28527d5df06550!2m2!1d-79.878991!2d43.7735932">
+            <a  class="mx-2" href="" target="https://www.google.com/maps/dir//10+Hurontario+St,+Inglewood,+ON+L7C+0S8/@43.7736498,-79.9140104,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x882b10596c2c26f9:0x6c28527d5df06550!2m2!1d-79.878991!2d43.7735932">
               <i class="nav-link js-scroll-trigger fas fa-map-marked-alt" style="padding-bottom: 0rem; padding-top: 0rem;"></i>
             </a>
           <!--</li>
