--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ function myFunction() {
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto" style="margin-top: 10px">
-<h1 class="col-xl no no-gutters text-uppercase"  style="padding-top: -10px;  padding-bottom: 10px; color: black;"><b>Spice up your cut with Blurry Breeze</b></h1>
+<h1 class="col-xl no no-gutters text-uppercase"  style="padding-top: -10px;  padding-bottom: 10px; color: black;"><b>SPICE UP YOUR CUT WITH BLURRY BREEZE</b></h1>
   <div class="container-fluid justify-content-center" style="">
   <div class="row" style="padding-bottom: 50px; padding-top: 50px;" >
         <div class="col-lg-4">
